Include client JAR in sync distribution
- deploy.sh: build :client:jar alongside :server:jar and copy
  game-client.jar to assets/client/ so it's served by the asset server
- server.properties.example: add 'client' to server.client.sync.types
- SyncApp: show 'Launch Game' button after sync when client JAR exists;
  launches java -jar ~/.adventure-friends/client/game-client.jar and
  exits the sync app

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>